2012-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wand_symbols.h, magick/symbol.h: MagickWand API is now
	prefixed with 'Gm' when the --enable-symbol-prefix configure
	option is supplied.  These changes are contributed by Ben Wu.
	Details of changes are as follows:

	1. A new header file wand/wand_symbols.h which prefixes all
	   MagickWand API symbols with Gm.
	2. Modification to all the header files in wand/ to include
	   wand_symbols.h.
	3. Modification to magick/symbols.h to include additional
	   symbols which were colliding with names in ImageMagick.
	4. Modification to magick/error.c to exclude function
	   definitions for MagickError, MagickFatalError,
	   MagickWarning, and ThrowException when building with
	   --enable-symbol-prefix option. There four names were also
	   defined as macros so it appears that putting them in a
	   symbol-remapping file wont work.

	* Makefile.am: Update Automake to 1.12.5.

2012-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/COPYING: Change Magick++ usage license to be exactly
	the MIT license without the additional sentence about retention of
	copyright (which was already legally implicit).

2012-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/symbols.h: Re-generate list of symbols to prefix.

	* magick/utility.c (IsGlob): IsGlob can be more efficient.

	* magick/floats.c: Use compile-time selection of endian-specific
	code rather than run-time.  Fix cast warning with 64-bit builds.

2012-11-07  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* coders/png.c (WriteOnePNGImage): The wrong QuantumType was
	sometimes passed to ExportImagePixelArea() by the PNG encoder.

	* coders/png.c (ReadOnePNGImage): Let libpng unpack all sub-8-bit
	pixels (see change of 2012-08-31 which lets libpng unpack sub-8-bit
	palette images; this also lets libpng unpack the grayscale images).

	* coders/png.c (ReadOnePNGImage): Corrected the reading of interlaced