@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020121118"
-#define public MagickPackageReleaseDate "snapshot-20121118"
+#define public MagickPackageVersionAddendum ".020121119"
+#define public MagickPackageReleaseDate "snapshot-20121119"
